basic oauth with profile management (#1)
* feat(mw): permissions mw, user update route

- user update route
- permissions mw
- few helper functions
- removed value_object

* chore: code format
